--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -16,15 +16,15 @@
 
 /* General Styling */
 .text-yellow {
-    color: #fbbf24; /* Tailwind's yellow-400 */
+    color: #fbbf24;
 }
 
 .bg-yellow {
-    background-color: #fbbf24; /* Tailwind's yellow-400 */
+    background-color: #fbbf24;
 }
 
 .bg-yellow-hover:hover {
-    background-color: #f59e0b; /* Tailwind's yellow-500 */
+    background-color: #f59e0b;
 }
 
 .rounded-lg {
